# event-driven-multi-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
.cursor/rules/: docs-workflow.mdc  eventforge-core.mdc  frontend-nextjs.mdc  infra-aws.mdc
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 5f4297155502_initial_schema_with_pgvector.py  a1b2c3d4e5f6_add_sources_table.py  d4e5f6a7b8c9_add_document_chunks.py  e5f6a7b8c9d0_add_knowledge_entities.py  g7b8c9d0e1f2_add_synthesis_reports.py  h8c9d0e1f2a3_add_llm_usage.py  i9d0e1f2a3b4_embedding_vector_1536.py
backend/src/eventforge/: main.py
backend/src/eventforge/agents/: embedding.py  ingestion.py  knowledge.py  research.py  synthesis.py
backend/src/eventforge/api/: deps.py
backend/src/eventforge/api/routes/: health.py  queries.py  stream.py  v1.py
backend/src/eventforge/api/schemas/: queries.py
backend/src/eventforge/cli/: __init__.py  research_fanout.py
backend/src/eventforge/core/: aws.py  config.py  database.py  llm_pricing.py  logging.py  otel.py
backend/src/eventforge/db/: session.py
backend/src/eventforge/db/models/: __init__.py  base.py
backend/src/eventforge/db/repositories/: __init__.py  document_chunk.py  job.py  knowledge_entity.py  llm_usage.py  processed_event.py  source.py  synthesis_report.py  user.py
backend/src/eventforge/events/: __init__.py  deterministic.py  parser.py  publisher.py  stage_mapping.py
backend/src/eventforge/events/schemas/: __init__.py  constants.py  embedding_completed.py  ingestion_completed.py  knowledge_mined.py  pipeline_failed.py  research_all_completed.py  synthesis_completed.py
backend/src/eventforge/services/: pipeline_failure.py  query.py  stage_stream.py  step_functions.py
backend/src/eventforge/services/embedding/: __init__.py  chunking.py  client.py
backend/src/eventforge/services/knowledge/: __init__.py  entity_extraction.py  research_entities.py
backend/src/eventforge/services/llm/: __init__.py  client.py  types.py
backend/src/eventforge/services/llm/providers/: anthropic.py  base.py  openai.py
backend/src/eventforge/services/mock/: __init__.py  embedding.py  fixtures.py  llm.py  tavily.py
backend/src/eventforge/services/research/: __init__.py  note_generation.py  sub_query.py
backend/src/eventforge/services/resilience/: __init__.py  circuit_breaker.py  cost_cap.py  errors.py  external_call.py  retry.py
backend/src/eventforge/services/search/: tavily.py
backend/src/eventforge/services/synthesis/: __init__.py  report_generation.py
backend/src/eventforge/workers/: base.py  cost_cap.py  dlq.py  embedding.py  ingestion.py  knowledge.py  research.py  synthesis.py
backend/tests/: test_auth.py  test_aws.py  test_config.py  test_db.py  test_dlq_worker.py  test_embedding.py  test_embedding_client.py  test_event_parser.py  test_event_schemas.py  test_health.py  test_ingestion.py  test_knowledge.py  test_knowledge_services.py  test_llm_client.py  test_llm_pricing.py  test_logging.py  test_mock_external.py  test_pipeline_failed.py  test_queries.py  test_research.py  test_research_services.py  test_resilience.py  test_resilience_cost_cap.py  test_stream.py  test_synthesis.py  test_synthesis_services.py
docs/: ARCHITECTURE.md  CICD.md  ISSUES.md  LINEAR.md  LOCAL_DEV.md  TASKS.md  TECH_DECISIONS.md
frontend/: Dockerfile  README.md  package-lock.json  package.json
infra/terraform/: README.md
scripts/: export-openapi.sh  export_openapi.py  verify-dlq-redrive.sh  verify-pipeline-e2e.sh
scripts/ci/: ecs-deploy-backend.sh  (+2 more)
(+76 files in other folders)
