[project]
name = "eventforge"
version = "0.1.0"
description = "EventForge — event-driven multi-agent research platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14",
    "anthropic>=0.49",
    "asyncpg>=0.30",
    "boto3>=1.43.34",
    "fastapi>=0.115",
    "httpx>=0.28",
    "openai>=1.68",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "tiktoken>=0.9",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eventforge"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["eventforge"]

[tool.ruff.lint.per-file-ignores]
"alembic/**" = ["E501", "I001", "UP007", "UP035"]
"**/alembic/**" = ["E501", "I001", "UP007", "UP035"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "integration: requires LocalStack or other external services",
]
